kubernetes/services/infra-workshop/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: infra-workshop
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: front
    - port: 3000
      targetPort: 3000
      protocol: TCP
      name: api
  selector:
    run: infra-workshop
