kubernetes/services/infra-workshop/base/ingress.yaml
# ロードバランサーという位置付け
# ホストの情報、どのPathをどのサービスに投げるか
# 複数設定できるっぽい
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: infra-workshop
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  tls:
    - hosts:
        - TO_BE_REPLACED
      secretName: infra-workshop-tls
  rules:
    - host: TO_BE_REPLACED
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: infra-workshop
                port:
                  number: 80
